recipes/leftbar/style/leftbar_row.less
.dt-leftbar-row {

  // TODO: reconcile Theme colors, which probably means use them but
  //       update https://dialpad.design/design/colors/#theme in dialtone.css
  //       to reflect the new design

  //  ============================================================================
  //  $   CSS CUSTOM PROPERTIES
  //  ----------------------------------------------------------------------------
  --leftbar-row-color-foreground: var(--theme-sidebar-color);
  --leftbar-row-color-background: var(--theme-sidebar-row-color-background);
  --leftbar-row-radius: 100em;
  --leftbar-row-opacity: 100%;
  --leftbar-row-alpha-color-foreground: var(--theme-sidebar-icon-color);
  --leftbar-row-alpha-width: calc(var(--size-300) * 10);
  --leftbar-row-alpha-height: calc(var(--size-300) * 9);
  --leftbar-row-omega-min-width: 0;
  --leftbar-row-omega-height: var(--leftbar-row-alpha-height);
  --leftbar-row-omega-display: block;
  --leftbar-row-description-font-weight: var(--fw-normal);
  --leftbar-row-description-font-size: var(--fs-200);
  --leftbar-row-description-line-height: var(--lh-200);
  --leftbar-row-status-color-foreground: var(--theme-sidebar-status-color);
  --leftbar-row-status-font-size: var(--fs-100);
  --leftbar-row-status-line-height: var(--lh-100);
  --leftbar-row-action-position-right: var(--size-400);
  --leftbar-row-action-position-bottom: 50%;
  --leftbar-row-action-width: var(--size-550);
  --leftbar-row-action-height: var(--leftbar-row-action-width);

  //  ============================================================================
  //  $   BASE STYLE
  //  ----------------------------------------------------------------------------
  position: relative;
  opacity: var(--leftbar-row-opacity);
  display: flex;
  background-color: var(--theme-sidebar-row-color-background);
  border-radius: var(--leftbar-row-radius);
  transition-duration: var(--td200);
  transition-property: background-color,border,box-shadow;
  transition-timing-function: var(--ttf-out-quint);
  cursor: pointer;

  //  ============================================================================
  //  $   VARIANTS
  //  ----------------------------------------------------------------------------
  //
  //  <div class="dt-leftbar-row dt-leftbar-row--{$VARIANT}">
  //    ...
  //  </div>
  //
  &:not(.dt-leftbar-row--no-action):hover {
    --leftbar-row-omega-display: none;
    --leftbar-row-omega-min-width: var(--leftbar-row-alpha-width);
  }

  &:hover {
      --leftbar-row-color-background: var(--theme-sidebar-row-color-background-hover);
    .d-presence {
      --presence-color-border-base: var(--theme-sidebar-selected-row-color-background);
    }
    .d-avatar__count {
      --avatar-count-color-shadow: var(--theme-sidebar-selected-row-color-background);
    }
  }

  &--has-unread {
    --leftbar-row-description-font-weight: var(--fw-bold);
    --leftbar-row-alpha-color-foreground: var(--leftbar-row-color-foreground);
  }

  &--muted {
    --leftbar-row-opacity: 60%;
  }

  &--selected {
    --leftbar-row-color-background: var(--theme-sidebar-selected-row-color-background);
    --leftbar-row-color-foreground: var(--theme-sidebar-selected-row-color);
    .d-avatar__count {
      --avatar-count-color-shadow: var(--theme-sidebar-selected-row-color-background);
    }
  }

  &--action-focused {
    --leftbar-row-omega-display: none;
    --leftbar-row-omega-min-width: var(--leftbar-row-alpha-width);
  }

  &__is-typing {
    --is-typing-size-shape: var(--size-550);

    height: var(--is-typing-size-shape);
    width: var(--is-typing-size-shape);
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2px;
    border-radius: var(--br-pill);
    opacity: 0.75;
  }

  &__is-typing span {
    transition: all 500ms ease;
    background: var(--bgc-strong);
    height: 4px;
    width: 4px;
    display: inline-block;
    padding: 0;
    opacity: 0.3;
    border-radius: var(--br-pill);
    animation: wave 1.5s ease infinite;
  }

  &__is-typing span:nth-child(1){
      animation-delay: 0ms;
  }
  &__is-typing span:nth-child(2){
    animation-delay: var(--td100);
  }
  &__is-typing span:nth-child(3){
    animation-delay: var(--td200);
  }

  //  ============================================================================
  //  $   ACTIONABLE ELEMENTS
  //  ----------------------------------------------------------------------------
  //
  // <el class="dt-leftbar-row__primary" ...>
  //   ...
  // </el>
  // <div class="dt-leftbar-row__action">
  //   <button class="dt-leftbar-row__action-button d-btn ..." ...>...</button>
  // </div>
  //
  &__primary {
    // contains extra style properties to support both <button> and <a>
    display: flex;
    align-items: center;
    flex: 1;
    width: 100%;
    text-align: left;
    background-color: var(--leftbar-row-color-background);
    color: var(--leftbar-row-color-foreground);
    text-decoration: none;
    appearance: none;
    font-size: inherit;
    line-height: inherit;
    margin: 0;
    border: 0;
    padding: 0;
    border-radius: var(--leftbar-row-radius);

    &:active {
      --leftbar-row-color-background: var(--theme-sidebar-row-color-background-active);
    }

    &:focus-visible {
      box-shadow: var(--bs-focus-ring-inset);
    }
  }

  &__action {
    position: absolute;
    right: 0;
    top: var(--leftbar-row-action-position-bottom);
    transform: translateY(calc(var(--leftbar-row-action-position-bottom) * -1));
  }

  &__action-button {
    opacity: 0;
    width: var(--leftbar-row-action-width);
    height: var(--leftbar-row-action-height);

    .dt-leftbar-row:hover &,
    &:focus-visible {
      opacity: 1;
    }
  }

  //  ============================================================================
  //  $   PRIMARY'S MAIN ELEMENTS
  //  ----------------------------------------------------------------------------
  //
  //  <div class="dt-leftbar-row__alpha">...</div>
  //  <div class="dt-leftbar-row__label">...</div>
  //  <div class="dt-leftbar-row__omega">...</div>

  &__alpha {
    color: var(--leftbar-row-alpha-color-foreground);
    display: flex;
    box-sizing: border-box;
    justify-content: center;
    align-items: center;
    padding-left: var(--space-400);
    padding-right: var(--space-400);
    width: var(--leftbar-row-alpha-width);
    height: var(--leftbar-row-alpha-height);
    border-radius: var(--leftbar-row-radius) 0 0 var(--leftbar-row-radius);;
  }

  &__label {
    flex: 1;
    min-width: 0;
  }

  &__omega {
    position: absolute;
    display: flex;
    right: var(--leftbar-row-action-position-right);
    top: var(--leftbar-row-action-position-bottom);
    transform: translateY(calc(var(--leftbar-row-action-position-bottom) * -1));
    gap: var(--space-300);
    justify-content: end;
    align-items: center;
    box-sizing: border-box;
    border-radius: var(--leftbar-row-radius);
  }

  &__unread-badge {
    display: var(--leftbar-row-omega-display);
  }

  &__active-voice {
    color: var(--fc-success);
    .opacity-pulsate();
  }

  &__dnd {
    padding-top: var(--space-200);
    padding-right: var(--space-300);
    color: var(--fc-tertiary);
    font-size: var(--fs-100);
    line-height: var(--lh-400);
    font-weight: var(--fw-medium);
  }

  //  ============================================================================
  //  $   LABEL'S ELEMENTS
  //  ----------------------------------------------------------------------------
  //
  //  <div class="dt-leftbar-row__description">
  //    ...
  //  </div>
  //  <div class="dt-leftbar-row__status">
  //    <span class="dt-leftbar-row__meta-context ...">...</span>
  //    <span class="dt-leftbar-row__meta-custom">...</span>
  //  </div>
  //
  &__description {
    display: block;
    font-weight: var(--leftbar-row-description-font-weight);
    font-size: var(--leftbar-row-description-font-size);
    line-height: var(--leftbar-row-description-line-height);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &__status {
    display: block;
    color: var(--leftbar-row-status-color-foreground);
    font-size: var(--leftbar-row-status-font-size);
    line-height: var(--leftbar-row-status-line-height);
    padding-bottom: var(--space-100);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &__meta-context {
    //
  }

  &__meta-custom:not(:empty) {
    .dt-leftbar-row__meta-context ~ &:before {
      content: ' • ';
      color: var(--theme-sidebar-status-color);
    }
  }

  &__icon-cc {
    border-radius: var(--size-200);
    width: calc(var(--size-300) * 3.5);
    height: calc(var(--size-300) * 3.5);
  }
}

.opacity-pulsate {
  -webkit-animation-name: opacity-pulsate;
  -webkit-animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-fill-mode: both;

  -moz-animation-name: opacity-pulsate;
  -moz-animation-duration: 1s;
  -moz-animation-iteration-count: infinite;
  -moz-animation-fill-mode: both;

  animation-name: opacity-pulsate;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-fill-mode: both;
}

@-webkit-keyframes opacity-pulsate {
  0%, 100%   { opacity: 0.2; }
  50%  { opacity: 1; }
}

@-moz-keyframes opacity-pulsate {
  0%, 100%   {opacity: 0.2; }
  50%  { opacity: 1; }
}

@keyframes opacity-pulsate {
  0%, 100%   { opacity: 0.2; }
  50%  { opacity: 1; }
}

@keyframes wave {
  0%, 50%, 100% {
    transform: translate(0, 0);
  }
  10% {
    transform: translate(0, -5px);
    opacity:90%;
  }
}

